fixed width of profile-card on mobile

--- a/resources/sass/components/_card.scss
+++ b/resources/sass/components/_card.scss
@@ -7,7 +7,7 @@
 .profile-card {
     border-radius: 21px !important;
     background-color: $secondary !important;
-    width: 25rem !important;
+    max-width: 25rem !important;
     position: sticky !important;
     top: 2rem !important;
 
@@ -16,8 +16,6 @@
         height: 100px;
         border-radius: 50%;
         background-color: $img;
-        // left: 0;
-        // right: 0;
     }
 
     .profile-name {
@@ -40,40 +38,4 @@
         border: none !important;
         font-family: Plus Jakarta Sans Bold, sans-serif;
     }
-}
-
-.posts {
-    @extend .profile-card;
-    position: static !important;
-    top: 0 !important;
-    width: 100% !important;
-
-    // margin-bottom: 2rem !important;
-
-
-    .profile-img-posts {
-        width: 60px;
-        height: 60px;
-        border-radius: 50%;
-        background-color: $img;
-    }
-
-    .btn-comment {
-        background-color: $comment !important;
-    }
-
-    .btn-post {
-        background-color: $orange;
-        bottom: 0;
-    }
-
-    .btn-post:hover {
-        background-color: $orange;
-    }
-
-    .btn-post:active {
-        background-color: $orange !important;
-        border: none !important;
-    }
-
 }
